Be explicit that we are reviewing risk flag
For example, a flag called "Restaining order", was confused that the review was for the actual order in court, rather than the flag.

--- a/app/views/case/flag.html
+++ b/app/views/case/flag.html
@@ -52,8 +52,7 @@
         items: [
           {
             href: "#",
-            text: "Review",
-            visuallyHiddenText: "flag"
+            text: "Review risk flag"
           }
         ]
       }
@@ -108,7 +107,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-l">Guidance using this flag</h2>
+    <h2 class="govuk-heading-l">Guidance using this risk flag</h2>
     <h3 class="govuk-heading-m">Purpose of use</h3>
 
     <p>To identify offenders convicted under the Sexual Offences Act 2003 and therefore subject to the notification period and requirements of the Sex Offender Register.</p>
