--- a/app/views/case/details.html
+++ b/app/views/case/details.html
@@ -37,81 +37,13 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <div class="govuk-!-margin-bottom-7">
-      <h2 class="govuk-heading-m">
-        Contact details
-      </h2>
-
-      {{ govukSummaryList({
-        classes: 'govuk-summary-list--no-border',
-        rows: [
-          {
-            key: { text: "Address" },
-            value: { html: case.serviceUserPersonalDetails.address.join('<br>') },
-            actions: {
-              items: [
-                {
-                  href: "/to-delius",
-                  text: "Change",
-                  visuallyHiddenText: "address on National Delius"
-                }
-              ]
-            }
-          },
-          {
-            key: { text: "Phone number" },
-            value: { text: case.serviceUserPersonalDetails.phone },
-            actions: {
-              items: [
-                {
-                  href: "/to-delius",
-                  text: "Change",
-                  visuallyHiddenText: "phone number on National Delius"
-                }
-              ]
-            }
-          },
-          {
-            key: { text: "Email" },
-            value: { text: case.serviceUserPersonalDetails.email },
-            actions: {
-              items: [
-                {
-                  href: "/to-delius",
-                  text: "Change",
-                  visuallyHiddenText: "email address on National Delius"
-                }
-              ]
-            }
-          }
-        ]
-      }) }}
-
-      {% if case.personalContacts.length > 0 %}
-        <p class="govuk-body">
-          <a href="/cases/{{ CRN }}/address-book-personal">View all personal contacts ({{ case.personalContacts.length }})</a>
-        </p>
-      {% endif %}
-
-      <p class="govuk-body-s govuk-hint-s">
-        Last updated 15 March 2021
-      </p>
-    </div>
-
-    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-
-    <div class="govuk-!-margin-bottom-7">
-      <h2 class="govuk-heading-m">
-        Personal details
-      </h2>
-
+    {% set personalDetails %}
       {% set dateOfBirthAndAge %}
         {{ case.serviceUserPersonalDetails.dateOfBirth | dateWithYear }} ({{ yearsSince(case.serviceUserPersonalDetails.dateOfBirth) }} years
       old)
       {% endset %}
 
       {{ govukSummaryList({
-        classes: 'govuk-summary-list--no-border',
         rows: [
           {
             key: { text: "Name" },
@@ -136,13 +68,138 @@
         ]
       }) }}
 
-      <p class="govuk-body">
-        <a href="personal-details">
-          View all personal details
-        </a>
-      </p>
-      <p class="govuk-body-s govuk-hint-s">
+      <p class="govuk-!-margin-bottom-0 govuk-!-margin-top-4 govuk-body-s govuk-hint-s">
         Last updated 6 January 2021
+      </p>
+    {% endset %}
+
+    {{ appSummaryCard({
+      titleText: "Personal details",
+      classes: 'govuk-!-margin-bottom-6',
+      html: personalDetails,
+      actions: {
+        items: [
+          {
+            href: "/cases/" + CRN + "/personal-details",
+            text: "View all personal details"
+          }
+        ]
+      }
+    }) }}
+
+    {% set contactDetails %}
+      {{ govukSummaryList({
+        rows: [
+          {
+            key: { text: "Phone number" },
+            value: { html: case.serviceUserPersonalDetails.phone }
+          },
+          {
+            key: { text: "Email address" },
+            value: { html: case.serviceUserPersonalDetails.email }
+          }
+        ]
+      }) }}
+    {% endset %}
+
+    {{ appSummaryCard({
+      titleText: "Contact details",
+      classes: 'govuk-!-margin-bottom-6',
+      html: contactDetails,
+      actions: {
+        items: [
+          {
+            href: "#",
+            text: "Change in Delius"
+          }
+        ]
+      }
+    }) }}
+
+    {% set identifiersHtml %}
+      {{ govukSummaryList({
+        rows: [
+          {
+            key: { text: "PNC" },
+            value: { html: case.PNC }
+          },
+          {
+            key: { text: "CRN" },
+            value: { html: case.CRN }
+          },
+          {
+            key: { text: "NOMS" },
+            value: { html: 'None' }
+          },
+          {
+            key: { text: "NI" },
+            value: { html: 'None' }
+          }
+        ]
+      }) }}
+    {% endset %}
+
+    {{ appSummaryCard({
+      titleText: "Identifiers",
+      classes: 'govuk-!-margin-bottom-6',
+      html: identifiersHtml
+    }) }}
+
+    <h3 class="govuk-heading-m">Addresses</h3>
+
+    {% set mainAddress %}
+      {{ govukSummaryList({
+        rows: [
+          {
+            key: { text: "Address" },
+            value: { html: case.serviceUserPersonalDetails.mainAddress.address.join('<br>') }
+          } if case.serviceUserPersonalDetails.mainAddress,
+          {
+            key: { text: "Telephone" },
+            value: { html: case.serviceUserPersonalDetails.mainAddress.telephoneNumber }
+          },
+          {
+            key: { text: "Type of address" },
+            value: { html: case.serviceUserPersonalDetails.mainAddress.type + (' (verified)' if case.serviceUserPersonalDetails.mainAddress.typeVerified else ' (not verified)') }
+          },
+          {
+            key: { text: "Start date" },
+            value: { html: case.serviceUserPersonalDetails.mainAddress.startDate | dateWithYear }
+          },
+          {
+            key: { text: "Notes" },
+            value: { html: case.serviceUserPersonalDetails.mainAddress.notes | nl2br }
+          }
+        ]
+      }) }}
+    {% endset %}
+
+    {% if case.serviceUserPersonalDetails.mainAddress %}
+      {{ appSummaryCard({
+        titleText: "Main address",
+        classes: 'govuk-!-margin-bottom-6',
+        html: mainAddress,
+        actions: {
+          items: [
+            {
+              href: "#",
+              text: "Change in Delius"
+            }
+          ]
+        }
+      }) }}
+    {% endif %}
+
+    <div class="govuk-!-margin-bottom-7">
+
+      {% if case.personalContacts.length > 0 %}
+        <p class="govuk-body">
+          <a href="/cases/{{ CRN }}/address-book-personal">View all personal contacts ({{ case.personalContacts.length }})</a>
+        </p>
+      {% endif %}
+
+      <p class="govuk-body-s govuk-hint-s">
+        Last updated 15 March 2021
       </p>
     </div>
 
