Updated lorem ipsum text for IOM historic risk flag

--- a/app/views/case/flags.html
+++ b/app/views/case/flags.html
@@ -141,7 +141,7 @@
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">{{ govukTag({ html: '<a href="#">IOM</a>', classes: 'govuk-tag--link govuk-tag--grey' }) }}</td>
-      <td class="govuk-table__cell app-flags-table-cell">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
+      <td class="govuk-table__cell app-flags-table-cell">Integrated Offender Officer assigned</td>
       <td class="govuk-table__cell app-flags-table-cell">10 Nov 2020</td>
     </tr>
   </tbody>
