--- a/app/views/case/_case-name.html
+++ b/app/views/case/_case-name.html
@@ -1,2 +1,2 @@
-{% set alias = case.serviceUserPersonalDetails.aliases[0] %}
-{% set name = case.serviceUserPersonalDetails.name + " (" + alias + ")" if alias else case.serviceUserPersonalDetails.name %}
+{% set knownAs = case.serviceUserPersonalDetails.preferredNameKnownAs %}
+{% set name = case.serviceUserPersonalDetails.name + " (" + knownAs + ")" if knownAs else case.serviceUserPersonalDetails.name %}
