--- a/app/views/case/details.html
+++ b/app/views/case/details.html
@@ -27,120 +27,24 @@
 {% set currentNavSection = 'details' %}
 {% include "case/_case-nav.html" %}
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-7">{{title}}</h1>
-  </div>
-</div>
+<h1 class="govuk-heading-l govuk-!-margin-bottom-7">{{title}}</h1>
 
+{% set contactDetails %}
+  {% set address %}
+    {% if case.serviceUserPersonalDetails.mainAddress.noFixedAbode %}
+      No fixed abode<br />
+      {{ case.serviceUserPersonalDetails.mainAddress.type }}
+    {% endif %}
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+    {{ case.serviceUserPersonalDetails.mainAddress.address.join('<br>') | safe }}
 
-    {% set personalDetails %}
-      {% set dateOfBirthAndAge %}
-        {{ case.serviceUserPersonalDetails.dateOfBirth | dateWithYear }} ({{ yearsSince(case.serviceUserPersonalDetails.dateOfBirth) }} years
-      old)
-      {% endset %}
-
+    {% set addressDetails %}
       {{ govukSummaryList({
         rows: [
           {
-            key: { text: "Name" },
-            value: { text: case.serviceUserPersonalDetails.name }
-          },
-          {
-            key: { text: "Preferred name/Known as" },
-            value: { text: case.serviceUserPersonalDetails.preferredNameKnownAs }
-          } if case.serviceUserPersonalDetails.preferredNameKnownAs,
-          {
-            key: { text: "Aliases" },
-            value: { text: case.serviceUserPersonalDetails.aliases.join(', ') | default('<span class="govuk-hint-s">None known</span>', true) | safe }
-          },
-          {
-            key: { text: "Date of birth" },
-            value: { text: dateOfBirthAndAge }
-          },
-          {
-            key: { text: "Preferred language" },
-            value: { text: case.serviceUserPersonalDetails.preferredLanguage }
-          },
-          {
-            key: { text: "Disabilities and adjustments" },
-            value: { text: case.serviceUserPersonalDetails.disabilitiesAndAdjustments.join(', ') | default('<span class="govuk-hint-s">None known</span>', true) | safe }
-          },
-          {
-            key: { text: "PNC" },
-            value: { html: case.PNC }
-          },
-          {
-            key: { text: "CRN" },
-            value: { html: case.CRN }
-          }
-        ]
-      }) }}
-
-      <p class="govuk-!-margin-bottom-0 govuk-!-margin-top-4 govuk-body-s govuk-hint-s">
-        Last updated 6 January 2021
-      </p>
-    {% endset %}
-
-    {{ appSummaryCard({
-      titleText: "Personal details",
-      classes: 'govuk-!-margin-bottom-6',
-      html: personalDetails,
-      actions: {
-        items: [
-          {
-            href: "/cases/" + CRN + "/personal-details",
-            text: "View all personal details"
-          }
-        ]
-      }
-    }) }}
-
-    {% set contactDetails %}
-      {{ govukSummaryList({
-        rows: [
-          {
-            key: { text: "Phone number" },
-            value: { html: case.serviceUserPersonalDetails.phone }
-          },
-          {
-            key: { text: "Email address" },
-            value: { html: case.serviceUserPersonalDetails.email }
-          }
-        ]
-      }) }}
-    {% endset %}
-
-    {{ appSummaryCard({
-      titleText: "Contact details",
-      classes: 'govuk-!-margin-bottom-6',
-      html: contactDetails,
-      actions: {
-        items: [
-          {
-            href: "#",
-            text: "Change in Delius"
-          }
-        ]
-      }
-    }) }}
-
-    <h3 class="govuk-heading-m">Addresses</h3>
-
-    {% set mainAddress %}
-      {{ govukSummaryList({
-        rows: [
-          {
-            key: { text: "Address" },
-            value: { html: case.serviceUserPersonalDetails.mainAddress.address.join('<br>') }
-          } if case.serviceUserPersonalDetails.mainAddress,
-          {
-            key: { text: "Telephone" },
+            key: { text: "Address telephone" },
             value: { html: case.serviceUserPersonalDetails.mainAddress.telephoneNumber }
-          },
+          } if case.serviceUserPersonalDetails.mainAddress.telephoneNumber,
           {
             key: { text: "Type of address" },
             value: { html: case.serviceUserPersonalDetails.mainAddress.type + (' (verified)' if case.serviceUserPersonalDetails.mainAddress.typeVerified else ' (not verified)') }
@@ -152,87 +56,238 @@
           {
             key: { text: "Notes" },
             value: { html: case.serviceUserPersonalDetails.mainAddress.notes | nl2br }
-          }
+          } if case.serviceUserPersonalDetails.mainAddress.notes
         ]
       }) }}
     {% endset %}
 
-    {% if case.serviceUserPersonalDetails.mainAddress %}
-      {{ appSummaryCard({
-        titleText: "Main address",
-        classes: 'govuk-!-margin-bottom-6',
-        html: mainAddress,
-        actions: {
-          items: [
-            {
-              href: "#",
-              text: "Change in Delius"
-            }
-          ]
-        }
-      }) }}
-    {% endif %}
-
-    <div class="govuk-!-margin-bottom-7">
-
+    {% set personalContacts %}
       {% if case.personalContacts.length > 0 %}
-        <p class="govuk-body">
-          <a href="/cases/{{ CRN }}/address-book-personal">View all personal contacts ({{ case.personalContacts.length }})</a>
-        </p>
+        <ul class="govuk-list">
+          {% for contact in case.personalContacts %}
+            <li>
+              <a href="#">{{ contact.name }} – {{ contact.relationship }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      {% else %}
+        None
       {% endif %}
+    {% endset %}
 
-      <p class="govuk-body-s govuk-hint-s">
-        Last updated 15 March 2021
-      </p>
-    </div>
+    {{ govukDetails({
+      summaryText: "View address details",
+      classes: 'govuk-!-margin-top-2 govuk-!-margin-bottom-0',
+      html: addressDetails
+    }) }}
+  {% endset %}
 
-    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+  {{ govukSummaryList({
+    rows: [
+      {
+        key: { text: "Phone number" },
+        value: { html: case.serviceUserPersonalDetails.phone }
+      },
+      {
+        key: { text: "Email address" },
+        value: { html: case.serviceUserPersonalDetails.email }
+      },
+      {
+        key: { text: "Main address" },
+        value: { html: address }
+      },
+      {
+        key: { text: "Other addresses" },
+        value: { html: '
+        <ul class="govuk-list">
+          <li>2 other current addresses</li>
+          <li>10 previous addresses</li>
+        </ul>
 
-    <div class="govuk-!-margin-bottom-7">
-      <h2 class="govuk-heading-m">
-        Circumstances
-      </h2>
+        <p><a href="#">View all addresses</a></p>' }
+      },
+      {
+        key: { text: "Personal contacts" },
+        value: { html: personalContacts }
+      }
+    ]
+  }) }}
 
-      {{ govukSummaryList({
-        classes: 'govuk-summary-list--no-border',
-        rows: [
-          {
-            key: { text: "Employment status" },
-            value: { text: case.serviceUserPersonalDetails.circumstances.employment }
-          },
-          {
-            key: { text: "Housing status" },
-            value: { text: case.serviceUserPersonalDetails.circumstances.housingStatus }
-          },
-          {
-            key: { text: "Safeguarding issues" },
-            value: { text: case.serviceUserPersonalDetails.circumstances.safeguardingIssues.join(', ') or 'None' }
-          }
-        ]
-        }) }}
+  <p class="govuk-!-margin-bottom-0 govuk-!-margin-top-4 govuk-body-s govuk-hint-s">
+    Last updated 6 January 2021
+  </p>
+{% endset %}
 
-      <p class="govuk-body">
-        <a href="#">
-          View all circumstances
-        </a>
-      </p>
-      <p class="govuk-body-s govuk-hint-s">
-        Last updated 10 March 2021
-      </p>
-    </div>
+{{ appSummaryCard({
+  titleText: "Contact details",
+  classes: 'govuk-!-margin-bottom-6 app-summary-card--large-title',
+  html: contactDetails,
+  actions: {
+    items: [
+      {
+        href: "#",
+        text: "Change in Delius"
+      }
+    ]
+  } if false
+}) }}
 
-  </div>
+{% set personalDetails %}
+  {% set dateOfBirthAndAge %}
+    {{ case.serviceUserPersonalDetails.dateOfBirth | dateWithYear }} ({{ yearsSince(case.serviceUserPersonalDetails.dateOfBirth) }} years
+  old)
+  {% endset %}
 
+  {% set disabilitiesAndAdjustments %}
+    {% if case.serviceUserPersonalDetails.disabilitiesAndAdjustments.length > 0 %}
+      <ul class="govuk-list">
+      {% for disability in case.serviceUserPersonalDetails.disabilitiesAndAdjustments %}
+        <li>
+          {{ disability.disability }}
+        </li>
+      {% endfor %}
+      </ul>
 
-  <div class="govuk-grid-column-one-third">
+      <p><a href="/cases/{{ CRN }}/disabilities-and-adjustments">View details and adjustments</a></p>
+    {% else %}
+      None
+    {% endif %}
+  {% endset %}
 
-    <h2 class="govuk-heading-m">Personal documents</h2>
-
+  {% set documents %}
     {% set documents = case.currentOrder.personalDocuments %}
-    {% include "case/_case-documents.html" %}
+    <ul class="moj-timeline__documents govuk-!-margin-top-0">
+      {% for doc in documents %}
+      <li class="moj-timeline__document-item">
+        <a class="moj-timeline__document-link" href="#"><strong>{{ doc.name }}</strong></a><br>
+        <span style="padding-left: 25px;">
+          {% if doc.lastUpdateDate %}
+            Last updated {{ doc.lastUpdateDate | dateWithYearShortMonth }}
+          {% else %}
+            <span class="govuk-hint-s">Unavailable</span>
+          {% endif %}
+        </span>
+      </li>
+      {% endfor %}
+    </ul>
+  {% endset %}
 
-  </div>
+  {{ govukSummaryList({
+    rows: [
+      {
+        key: { text: "Name" },
+        value: { text: case.serviceUserPersonalDetails.name }
+      },
+      {
+        key: { text: "Date of birth" },
+        value: { text: dateOfBirthAndAge }
+      },
+      {
+        key: { text: "Preferred name/Known as" },
+        value: { text: case.serviceUserPersonalDetails.preferredNameKnownAs }
+      } if case.serviceUserPersonalDetails.preferredNameKnownAs,
+      {
+        key: { text: "Aliases" },
+        value: { html: case.serviceUserPersonalDetails.aliases.join(', ') | default('None known', true) }
+      },
+      {
+        key: { text: "Previous name" },
+        value: { text: case.serviceUserPersonalDetails.previousName }
+      } if case.serviceUserPersonalDetails.previousName,
+      {
+        key: { text: "Preferred language" },
+        value: { text: case.serviceUserPersonalDetails.preferredLanguage + ' (interpreter needed)' if case.serviceUserPersonalDetails.interpreterNeeded else case.serviceUserPersonalDetails.preferredLanguage }
+      },
+      {
+        key: { text: "Disabilities" },
+        value: { html: disabilitiesAndAdjustments }
+      },
+      {
+        key: { text: "PNC" },
+        value: { html: case.PNC }
+      },
+      {
+        key: { text: "CRN" },
+        value: { html: case.CRN }
+      },
+      {
+        key: { text: "Personal documents" },
+        value: { html: documents }
+      }
+    ]
+  }) }}
 
-</div>
+  <p class="govuk-!-margin-bottom-0 govuk-!-margin-top-4 govuk-body-s govuk-hint-s">
+    Last updated 6 January 2021
+  </p>
+{% endset %}
 
+{{ appSummaryCard({
+  titleText: "Personal details",
+  classes: 'govuk-!-margin-bottom-6 app-summary-card--large-title',
+  html: personalDetails,
+  actions: {}
+}) }}
+
+{% set circumstances %}
+  {{ govukSummaryList({
+    rows: [
+      {
+        key: { text: "Employment status" },
+        value: { text: case.serviceUserPersonalDetails.circumstances.employment }
+      },
+      {
+        key: { text: "Housing status" },
+        value: { text: case.serviceUserPersonalDetails.circumstances.housingStatus }
+      },
+      {
+        key: { text: "Safeguarding issues" },
+        value: { text: case.serviceUserPersonalDetails.circumstances.safeguardingIssues.join(', ') or 'None' }
+      }
+    ]
+  }) }}
+{% endset %}
+
+{{ appSummaryCard({
+  titleText: "Circumstances",
+  classes: 'govuk-!-margin-bottom-6 app-summary-card--large-title',
+  html: circumstances,
+  actions: {}
+}) }}
+
+{% set equality %}
+  {{ govukSummaryList({
+    rows: [
+      {
+        key: { text: "Religion or belief" },
+        value: { text: case.serviceUserPersonalDetails.religion }
+      },
+      {
+        key: { text: "Sex" },
+        value: { text: case.serviceUserPersonalDetails.sex }
+      },
+      {
+        key: { text: "Gender identity" },
+        value: { text: case.serviceUserPersonalDetails.genderIdentity }
+      } if case.serviceUserPersonalDetails.genderIdentity,
+      {
+        key: { text: "Self-described gender" },
+        value: { text: case.serviceUserPersonalDetails.selfDescribedGender }
+      } if case.serviceUserPersonalDetails.selfDescribedGender,
+      {
+        key: { text: "Sexual orientation" },
+        value: { text: case.serviceUserPersonalDetails.sexualOrientation }
+      }
+    ]
+  }) }}
+
+  <p class="govuk-!-margin-top-2 govuk-!-margin-bottom-0"><a href="#">View more on Delius</a></p>
+{% endset %}
+
+{{ appSummaryCard({
+  titleText: "Equality monitoring",
+  classes: 'govuk-!-margin-bottom-6 app-summary-card--large-title',
+  html: equality,
+  actions: {}
+}) }}
 {% endblock %}
