Simplify cases page
Simplify the cases page to a list of cases – when we consider the needs for this page we can build more easily on a simpler design

Also rename "My cases" to "Your cases"

--- a/app/views/includes/moj-header.html
+++ b/app/views/includes/moj-header.html
@@ -37,7 +37,7 @@
       <nav class="moj-primary-navigation" aria-label="Primary navigation">
         <ul class="moj-primary-navigation__list">
           <li class="moj-primary-navigation__item">
-            <a class="moj-primary-navigation__link" {% if myCases %}aria-current="page"{% endif %} href="/cases">My cases</a>
+            <a class="moj-primary-navigation__link" {% if myCases %}aria-current="page"{% endif %} href="/cases">Your cases</a>
           </li>
         </ul>
       </nav>
