--- a/app/views/index.html
+++ b/app/views/index.html
@@ -39,7 +39,7 @@
       <h2 class="govuk-heading-m" id="subsection-title">
         Related content
       </h2>
-      <a href="/user-testing" class="govuk-button">
+      <a href="/sign-in" class="govuk-button">
         Test prototype
       </a>
       <nav role="navigation" aria-labelledby="subsection-title">
