--- a/app/views/sign-in.html
+++ b/app/views/sign-in.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
+{% set signedOut = true %}
 {% set title = "Sign in" %}
+{% block pageTitle %}{{ title }}{% endblock %}
 
 {% block content %}
 <h1 class="govuk-heading-xl">Sign in</h1>
