--- a/app/views/case/index.html
+++ b/app/views/case/index.html
@@ -176,6 +176,21 @@
     <h2 class="govuk-heading-m">
       Personal details
     </h2>
+
+    {% set disabilities %}
+      {% if case.serviceUserPersonalDetails.disabilitiesAndAdjustments.length > 0 %}
+        <ul class="govuk-list">
+        {% for disability in case.serviceUserPersonalDetails.disabilitiesAndAdjustments %}
+          <li>
+            {{ disability.disability }}
+          </li>
+        {% endfor %}
+        </ul>
+      {% else %}
+        None
+      {% endif %}
+    {% endset %}
+
     {{ govukSummaryList({
       classes: 'govuk-summary-list--no-border',
       rows: [
@@ -184,8 +199,8 @@
           value: { text: case.serviceUserPersonalDetails.preferredLanguage }
         },
         {
-          key: { text: "Disabilities and adjustments" },
-          value: { text: case.serviceUserPersonalDetails.disabilitiesAndAdjustments.join(', ') | default('<span class="govuk-hint-s">None known</span>', true) | safe }
+          key: { text: "Disabilities" },
+          value: { html: disabilities }
         }
       ]
       }) }}
