--- a/app/views/case/details.html
+++ b/app/views/case/details.html
@@ -66,7 +66,7 @@
         <ul class="govuk-list">
           {% for contact in case.personalContacts %}
             <li>
-              <a href="#">{{ contact.name }} – {{ contact.relationship }}</a>
+              <a href="/cases/{{ CRN }}/personal-contact/{{ contact.name | toSlug }}">{{ contact.name }} – {{ contact.relationship }}</a>
             </li>
           {% endfor %}
         </ul>
