--- a/app/views/case/details.html
+++ b/app/views/case/details.html
@@ -66,7 +66,10 @@
         <ul class="govuk-list">
           {% for contact in case.personalContacts %}
             <li>
-              <a href="/cases/{{ CRN }}/personal-contact/{{ contact.name | toSlug }}">{{ contact.name }} – {{ contact.relationship }}</a>
+              <p>
+                {{ contact.relationshipType }}:<br />
+                <a href="/cases/{{ CRN }}/personal-contact/{{ contact.name | toSlug }}">{{ contact.name }} – {{ contact.relationship }}</a>
+              </p>
             </li>
           {% endfor %}
         </ul>
