--- a/app/views/case/_case-service-user-banner.html
+++ b/app/views/case/_case-service-user-banner.html
@@ -13,7 +13,7 @@
       <a href="/cases/{{ CRN }}/compliance">Non-compliance</a>
     </strong>
   {% endif %}
-  {% for flag in case.riskBadges %}
+  {% for flag in case.riskFlags %}
     {{ appRiskFlag({ flag: flag, CRN: CRN }) }}
   {% endfor %}
 </p>
