--- a/app/views/_components/risk-flag/template.njk
+++ b/app/views/_components/risk-flag/template.njk
@@ -1,6 +1,10 @@
 {%- from "govuk/components/tag/macro.njk" import govukTag -%}
 {% set flag = params.flag %}
-{% set flagClass = 'govuk-tag--' + flag.colour if flag.colour else flag.class %}
+{% if flag.rosh %}
+  {% set flagClass = 'govuk-tag--' + flag.colour if flag.colour else flag.class %}
+{% else %}
+  {% set flagClass = 'govuk-tag--grey' %}
+{% endif %}
 
 {% set flagHtml %}
   {% if flag.rosh %}
