--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -152,4 +152,8 @@ $govuk-assets-path: '/govuk/assets/';
   border-bottom-width: 0;
 }
 
+.app-tag--dark-red {
+  background: govuk-colour("red");
+}
+
 // .app-summary-card--compliance-last {}
