--- a/app/views/_components/risk-flag/template.njk
+++ b/app/views/_components/risk-flag/template.njk
@@ -1,5 +1,6 @@
 {%- from "govuk/components/tag/macro.njk" import govukTag -%}
 {% set flag = params.flag %}
+{% set flagClass = 'govuk-tag--' + flag.colour if flag.colour else flag.class %}
 
 {% set flagHtml %}
   {% if flag.rosh %}
@@ -8,4 +9,4 @@
     <a href="/cases/{{ params.CRN }}/flag/{{ flag.text | toSlug }}">{{ flag.text }}</a>
   {% endif %}
 {% endset %}
-{{ govukTag({ html: flagHtml, classes: 'govuk-tag--link govuk-!-margin-right-1 govuk-tag--' + (flag.class or flag.colour) }) }}
+{{ govukTag({ html: flagHtml, classes: 'govuk-tag--link govuk-!-margin-right-1 ' + flagClass }) }}
