--- a/app/views/cases/_case-list-data.html
+++ b/app/views/cases/_case-list-data.html
@@ -33,7 +33,7 @@
           </td>
           <td class="govuk-table__cell">{{ case.currentOrder.type }}</td>
           <td class="govuk-table__cell">
-            <span class="govuk-tag govuk-tag--{{ case.riskOfSeriousHarmLevel.class }}">{{ case.riskOfSeriousHarmLevel.text }}</span>
+            <span class="govuk-tag {{ case.riskOfSeriousHarmLevel.class }}">{{ case.riskOfSeriousHarmLevel.text }}</span>
           </td>
           {% set nextApp = nextAppointment(case.CRN, data) %}
           <td class="govuk-table__cell">
