Rename Risk flags to Risk
- Move historic flags to its own page
- Create a space for all detailed risk information

--- a/app/views/case/_case-nav.html
+++ b/app/views/case/_case-nav.html
@@ -25,10 +25,10 @@
         </li>
         <li class="moj-sub-navigation__item">
           <a class="moj-sub-navigation__link govuk-link--no-visited-state"
-            {% if currentNavSection == 'flags' %}
+            {% if currentNavSection == 'risk' %}
             aria-current="page"
             {% endif %}
-            href="/cases/{{ CRN }}/flags">Risk flags</a>
+            href="/cases/{{ CRN }}/risk">Risk</a>
         </li>
         <li class="moj-sub-navigation__item">
           <a class="moj-sub-navigation__link govuk-link--no-visited-state"
