--- a/app/views/case/flag.html
+++ b/app/views/case/flag.html
@@ -14,8 +14,8 @@
       href: "/cases/" + CRN
     },
     {
-      text: "Risk flags",
-      href: "/cases/" + CRN + "/flags"
+      text: "Risk",
+      href: "/cases/" + CRN + "/risk"
     },
     {
       text: title
