Simplify risk labels

--- a/app/views/case/risk.html
+++ b/app/views/case/risk.html
@@ -57,15 +57,15 @@
   {{ govukSummaryList({
     rows: [
       {
-        key: { text: "Overall risk of harm" },
+        key: { text: "Overall" },
         value: { html: overallRiskHtml }
       },
       {
-        key: { text: "High risk of harm" },
+        key: { text: "High risk" },
         value: { html: highRiskOfHarm }
       },
       {
-        key: { text: "Medium risk of harm" },
+        key: { text: "Medium risk" },
         value: { html: mediumRiskOfHarm }
       },
       {
