Tweak removed risk flag page title

--- a/app/views/case/historic-risk-flags.html
+++ b/app/views/case/historic-risk-flags.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = "Historic risk flags" %}
+{% set title = "Removed risk flags" %}
 {% block pageTitle %}{{ title }}{% endblock %}
 
 {% block beforeContent %}
